objects/DealTransactionData2020JUN05__c/DealTransactionData2020JUN05__c.object-meta.xml
<CustomObject>
    <label>DealTransactionData2020JUN05</label>
    <nameField>
        <label>Transaction ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealTransactionData2020JUN05s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>