objects/DealTransactionData2020JUN05__c/fields/AdditionalDiscount__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscount__c</fullName>
    <label>AdditionalDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>