objects/DealTransactionData2020JUN05__c/fields/al__c.field-meta.xml
<CustomField>
    <fullName>al__c</fullName>
    <label>AllCost</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>