objects/DealTransactionData2020JUN05__c/fields/AllCostRebate__c.field-meta.xml
<CustomField>
    <fullName>AllCostRebate__c</fullName>
    <label>AllCostRebate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>