objects/DealTransactionData2020JUN05__c/fields/AllCosttoBaseRatio__c.field-meta.xml
<CustomField>
    <fullName>AllCosttoBaseRatio__c</fullName>
    <label>AllCosttoBaseRatio</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>