objects/DealTransactionData2020JUN05__c/fields/AllDiscount__c.field-meta.xml
<CustomField>
    <fullName>AllDiscount__c</fullName>
    <label>AllDiscount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>