objects/DealTransactionData2020JUN05__c/fields/AllDiscounttoListRatio__c.field-meta.xml
<CustomField>
    <fullName>AllDiscounttoListRatio__c</fullName>
    <label>AllDiscounttoListRatio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>