objects/DealTransactionData2020JUN05__c/fields/Attribute_Density__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Density__c</fullName>
    <label>Attribute-Density</label>
    <length>50</length>
    <type>Text</type>
</CustomField>