objects/DealTransactionData2020JUN05__c/fields/Attribute_Grade__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Grade__c</fullName>
    <label>Attribute-Grade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>