objects/DealTransactionData2020JUN05__c/fields/Attribute_ProductType__c.field-meta.xml
<CustomField>
    <fullName>Attribute_ProductType__c</fullName>
    <label>Attribute-ProductType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>