objects/DealTransactionData2020JUN05__c/fields/BasePrice__c.field-meta.xml
<CustomField>
    <fullName>BasePrice__c</fullName>
    <label>BasePrice</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>