objects/DealTransactionData2020JUN05__c/fields/CosListRatio__c.field-meta.xml
<CustomField>
    <fullName>CosListRatio__c</fullName>
    <label>CosListRatio</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>