objects/DealTransactionData2020JUN05__c/fields/CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup__c</fullName>
    <label>CustomerGroup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>