objects/DealTransactionData2020JUN05__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <label>CustomerID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>