objects/DealTransactionData2020JUN05__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>CustomerType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>