objects/DealTransactionData2020JUN05__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <label>DealID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>