objects/DealTransactionData2020JUN05__c/fields/Deal_ItemID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ItemID__c</fullName>
    <label>Deal ItemID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>