objects/DealTransactionData2020JUN05__c/fields/DealType__c.field-meta.xml
<CustomField>
    <fullName>DealType__c</fullName>
    <label>DealType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>