objects/DealTransactionData2020JUN05__c/fields/DistrubutorRebate__c.field-meta.xml
<CustomField>
    <fullName>DistrubutorRebate__c</fullName>
    <label>DistrubutorRebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>