objects/DealTransactionData2020JUN05__c/fields/FamilyAdjustments__c.field-meta.xml
<CustomField>
    <fullName>FamilyAdjustments__c</fullName>
    <label>FamilyAdjustments</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>