objects/DealTransactionData2020JUN05__c/fields/FreightCost__c.field-meta.xml
<CustomField>
    <fullName>FreightCost__c</fullName>
    <label>FreightCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>