objects/DealTransactionData2020JUN05__c/fields/Hierarchy_Division__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Division__c</fullName>
    <label>Hierarchy-Division</label>
    <length>50</length>
    <type>Text</type>
</CustomField>