objects/DealTransactionData2020JUN05__c/fields/Hierarchy_Family__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Family__c</fullName>
    <label>Hierarchy-Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>