objects/DealTransactionData2020JUN05__c/fields/InvoicePrice__c.field-meta.xml
<CustomField>
    <fullName>InvoicePrice__c</fullName>
    <label>InvoicePrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>