objects/DealTransactionData2020JUN05__c/fields/MarginBaseRatio__c.field-meta.xml
<CustomField>
    <fullName>MarginBaseRatio__c</fullName>
    <label>MarginBaseRatio</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>