objects/DealTransactionData2020JUN05__c/fields/MarginListRatio__c.field-meta.xml
<CustomField>
    <fullName>MarginListRatio__c</fullName>
    <label>MarginListRatio</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>