objects/DealTransactionData2020JUN05__c/fields/ParterChannelDiscount__c.field-meta.xml
<CustomField>
    <fullName>ParterChannelDiscount__c</fullName>
    <description>ParterChannelDiscount</description>
    <label>ParterChannelDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>