objects/DealTransactionData2020JUN05__c/fields/PocketMargin__c.field-meta.xml
<CustomField>
    <fullName>PocketMargin__c</fullName>
    <label>PocketMargin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>