objects/DealTransactionData2020JUN05__c/fields/PocketPrice__c.field-meta.xml
<CustomField>
    <fullName>PocketPrice__c</fullName>
    <label>PocketPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>