objects/DealTransactionData2020JUN05__c/fields/ProductAdjustments__c.field-meta.xml
<CustomField>
    <fullName>ProductAdjustments__c</fullName>
    <description>ProductAdjustments</description>
    <label>ProductAdjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>