objects/DealTransactionData2020JUN05__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>8</length>
    <type>Text</type>
</CustomField>