objects/DealTransactionData2020JUN05__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Number</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>TransactionDataLabel</relationshipLabel>
    <relationshipName>DealTransactionData2020JUN05s</relationshipName>
    <type>Lookup</type>
</CustomField>