objects/DealTransactionData2020JUN05__c/fields/SalesCountry__c.field-meta.xml
<CustomField>
    <fullName>SalesCountry__c</fullName>
    <label>SalesCountry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>