objects/DealTransactionData2020JUN05__c/fields/SalesRegion__c.field-meta.xml
<CustomField>
    <fullName>SalesRegion__c</fullName>
    <label>SalesRegion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>