objects/DealTransactionData2020JUN05__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <label>SalesRep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>