objects/DealTransactionData2020JUN05__c/fields/SalesWorldArea__c.field-meta.xml
<CustomField>
    <fullName>SalesWorldArea__c</fullName>
    <label>SalesWorldArea</label>
    <length>50</length>
    <type>Text</type>
</CustomField>