objects/DealTransactionData2020JUN05__c/fields/ServiceCost__c.field-meta.xml
<CustomField>
    <fullName>ServiceCost__c</fullName>
    <label>ServiceCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>