objects/DealTransactionData2020JUN05__c/fields/Shipto__c.field-meta.xml
<CustomField>
    <fullName>Shipto__c</fullName>
    <label>Shipto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>