objects/DealTransactionData2020JUN05__c/fields/ShipToCountry__c.field-meta.xml
<CustomField>
    <fullName>ShipToCountry__c</fullName>
    <label>ShipToCountry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>