objects/DealTransactionData2020JUN05__c/fields/ShipToRegion__c.field-meta.xml
<CustomField>
    <fullName>ShipToRegion__c</fullName>
    <label>ShipToRegion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>