objects/DealTransactionData2020JUN05__c/fields/ShipToWorldArea__c.field-meta.xml
<CustomField>
    <fullName>ShipToWorldArea__c</fullName>
    <label>ShipToWorldArea</label>
    <length>50</length>
    <type>Text</type>
</CustomField>