objects/DealTransactionData2020JUN05__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <label>SoldTo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>