objects/DealTransactionData2020JUN05__c/fields/SoldToCountry__c.field-meta.xml
<CustomField>
    <fullName>SoldToCountry__c</fullName>
    <label>SoldToCountry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>