objects/DealTransactionData2020JUN05__c/fields/SoldToRegion__c.field-meta.xml
<CustomField>
    <fullName>SoldToRegion__c</fullName>
    <label>SoldToRegion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>