objects/DealTransactionData2020JUN05__c/fields/SoldToWorldArea__c.field-meta.xml
<CustomField>
    <fullName>SoldToWorldArea__c</fullName>
    <label>SoldToWorldArea</label>
    <length>50</length>
    <type>Text</type>
</CustomField>