objects/DealTransactionData2020JUN05__c/fields/StandardCost__c.field-meta.xml
<CustomField>
    <fullName>StandardCost__c</fullName>
    <label>StandardCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>