objects/DealTransactionData2020JUN05__c/fields/VolumeDIscount__c.field-meta.xml
<CustomField>
    <fullName>VolumeDIscount__c</fullName>
    <label>VolumeDIscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>