objects/DealTransactionData2020JUN05__c/fields/VolumeRebate__c.field-meta.xml
<CustomField>
    <fullName>VolumeRebate__c</fullName>
    <label>VolumeRebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>