objects/DealTransactionData2020JUN05__c/fields/WorldArea__c.field-meta.xml
<CustomField>
    <fullName>WorldArea__c</fullName>
    <label>WorldArea</label>
    <length>50</length>
    <type>Text</type>
</CustomField>