objects/DealTransactionData2020JUN05__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_ID__c</columns>
    <columns>Deal_ItemID__c</columns>
    <columns>DealType__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>Date__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>